--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -4,7 +4,8 @@ doctype html
 - var useog = true
 - var lib = { jquery: true, d3js: false, angular: true, bootstrap: true, semantic: false }
 - var assets = "assets"
-- var thumbnail = "http://zbryikt.github.io/geoevent/img/thumbnail.png"
+- var thumbnail = "http://0media.tw/t/geoevent/img/thumbnail.png"
+- var demo = true
 html(lang="en")
   head(prefix="og: http://ogp.me/ns#")
     meta(charset="utf-8")
