--- a/src/sass/style/default.sass
+++ b/src/sass/style/default.sass
@@ -3,6 +3,10 @@
     background: rgba(255,128,64,0.3)
     border: 4px solid rgba(255,0,0,1.0)
 
+  .main-title
+    color: #fff
+    background: rgba(0,0,0,0.5)
+
   .infopanel
     background: rgba(45, 50, 64, 1.0)
     color: #eee
