--- a/src/jade/library.jade
+++ b/src/jade/library.jade
@@ -4,7 +4,7 @@ if useog
     meta(property="og:image:type",content="image/png")
     meta(property="og:image:width",content="200")
     meta(property="og:image:height",content="200")
-    meta(property="og:url",content="http://zbryikt.github.io/geoevent/")
+    meta(property="og:url",content="http://0media.tw/t/geoevent/")
     meta(property="og:type",content="website")
     meta(property="og:title",content="Events Visualization")
     meta(property="og:description",content="This tool helps you visualize events across time, using bubble to show the magnitude of specific event.")
