--- a/src/sass/style/gray.sass
+++ b/src/sass/style/gray.sass
@@ -3,6 +3,9 @@
     background: rgba(255,128,64,0.4)
     border: 3px solid rgba(255,0,0,1.0)
 
+  .main-title
+    background: rgba(255,255,255,0.3)
+
   .infopanel
     background: rgba(255,255,255,0.9)
     color: #444
