--- a/src/sass/style/green.sass
+++ b/src/sass/style/green.sass
@@ -3,6 +3,9 @@
     background: rgba(255,192,64,0.3)
     border: 3px solid rgba(255,92,0,1.0)
 
+  .main-title
+    background: rgba(255,255,255,0.5)
+
   .infopanel
     background: #0ea688
     color: #fff
