--- a/src/sass/zm-event.sass
+++ b/src/sass/zm-event.sass
@@ -15,7 +15,7 @@
   .main-title
     position: absolute
     z-index: index($order, main-title)
-    top: 2px
+    top: 0
     left: 0
     width: 100%
     padding: 2px 8px
