update content and fix new tab link

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -38,7 +38,10 @@ html(lang="en")
           hr
           .fb-like.pull-right(data-share="false",data-show-faces="false",data-layout="button_count")
           h2 Events Visualization
-          p This tool helps you visualize events across time and space with bubbles of magnitude of events, and works on devices with different screen size.
+          p 
+            | This tool helps you visualize events across time and space with bubbles of magnitude of events, and works on devices with different screen size. Above is an example of 
+            a(href="http://0media.tw/t/geoevent/widget/?src=1yY4pqGqI3rLMf5bQqe5XMztnnJ78RMUrfh-XpJdhd_o&color=default&ratio=20&=undefined&clat=12.573404&clng=-15.193685&initz=1") visualization of Islamic terrorist attacks from 1983 to 2015
+            | .
           hr
           h3 How to Use
           p prepare the event data in a google spreadsheet formatted like this:
