--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -42,6 +42,13 @@ html(lang="en")
             | This tool helps you visualize events across time and space with bubbles of magnitude of events, and works on devices with different screen size. Above is an example of 
             a(href="http://0media.tw/t/geoevent/widget/?src=1yY4pqGqI3rLMf5bQqe5XMztnnJ78RMUrfh-XpJdhd_o&color=default&ratio=20&=undefined&clat=12.573404&clng=-15.193685&initz=2") visualization of Islamic terrorist attacks from 1983 to 2015
             | .
+            br
+            h4 Other showcase:
+            ul
+              li: a(href="http://0media.tw/t/geoevent/widget/?src=17u9luNKn77I4Tyz3pPADnr6sw3yiob0Z6Dy4_FFpbl4&color=default&ratio=5&clat=20&clng=0&initz=2") Global Earthquake since 1902
+              li 
+                a(href="http://0media.tw/t/geoevent/widget/?src=1weTyy3X52QginfNbrSmxjR8WpsAEgJSRjzzqBJ8RaXk&color=default&ratio=20&clat=20&clng=0&initz=2") Global Commercial Aricraft Accident 
+                | ( partial data )
           hr
           h3 How to Use
           p prepare the event data in a google spreadsheet formatted like this:
